--- a/vježbe.html
+++ b/vježbe.html
@@ -21,7 +21,7 @@
 	<img src='vježbe_i_projekti/VJ3.png'width="400" height="500"> <br>
 	<img src='vježbe_i_projekti/VJ4_1.png'width="400" height="500">
 	<img src='vježbe_i_projekti/VJ4_2.png'width="400" height="500">
-	<img src='vježbe_i_projekti/projektni1.png'width="400" height="500">
+	<img src='vježbe_i_projekti/projektni1.pdf'width="400" height="500">
 	</div>
 	 <div style='text-align: center;'><h1>Pixel grafika </h1> </div>
 	<div style='text-align: center;'>
@@ -43,4 +43,5 @@
 	    <source src='vježbe_i_projekti/moj video 2.mp4' type='video/mp4'/>
     </video></div>
 </body>
+
 </html>
