--- a/vježbe.html
+++ b/vježbe.html
@@ -21,7 +21,7 @@
 	<img src='vježbe_i_projekti/VJ3.png'width="400" height="500"> <br>
 	<img src='vježbe_i_projekti/VJ4_1.png'width="400" height="500">
 	<img src='vježbe_i_projekti/VJ4_2.png'width="400" height="500">
-	<embed src="projektni1.pdf" width="400px" height="500px" />
+	<embed src='projektni1.pdf' width="400px" height="500px" />
 	</div>
 	 <div style='text-align: center;'><h1>Pixel grafika </h1> </div>
 	<div style='text-align: center;'>
@@ -45,4 +45,5 @@
 </body>
 
 </html>
+
 
