--- a/vježbe.html
+++ b/vježbe.html
@@ -35,7 +35,7 @@
 	<div style='text-align: center;'><h1>Video obrada </h1> </div>
 	<div style='text-align: center;'>
 	<img src='vježbe_i_projekti/VJ8_1.gif' width="600" height="250">
-	<img src='vježbe_i_projekti/VJ8_2.gif' width="600" height="250">
+	<img src='vježbe_i_projekti/VJ8_2.gif' width="600" height="250"><br>
 	<video width='800' height='600' controls=>
 	    <source src='vježbe_i_projekti/moj video.mp4' type='video/mp4'/>
     </video>
@@ -45,6 +45,7 @@
 </body>
 
 </html>
+
 
 
 
