--- a/vježbe.html
+++ b/vježbe.html
@@ -38,13 +38,14 @@
 	<img src='vježbe_i_projekti/VJ8_2.gif' width="600" height="250"><br>
 	<video width='800' height='600' controls=>
 	    <source src='vježbe_i_projekti/moj video.mp4' type='video/mp4'/>
-    </video>
+    </video><br>
     <video width='800' height='600' controls=>
 	    <source src='vježbe_i_projekti/moj video 2.mp4' type='video/mp4'/>
     </video></div>
 </body>
 
 </html>
+
 
 
 
